# dialectic

./: CLAUDE.md  package.json  tsconfig.base.json
.github/workflows/: mobile-ci.yml
.planning/: MILESTONES.md  NEXT-LEVEL-ROADMAP.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  VISION-NEXT.md  config.json  technical-opportunities.md
cc-sidecar/: .gitignore  BLUEPRINT.md  CLAUDE.md  pyproject.toml  schema.sql
cc-sidecar/cc_sidecar/: __init__.py  constants.py  models.py
cc-sidecar/cc_sidecar/daemon/: __init__.py  dashboard.html  ingest.py  redact.py  server.py  spool.py  timers.py
cc-sidecar/cc_sidecar/install/: __init__.py  cli.py
cc-sidecar/cc_sidecar/reducer/: __init__.py  extractor.py  machine.py  states.py
cc-sidecar/cc_sidecar/store/: __init__.py  database.py  queries.py
cc-sidecar/cc_sidecar/tui/: __init__.py  app.py  demo.py  styles.css
cc-sidecar/cc_sidecar/tui/widgets/: agent_list.py  alert_feed.py  event_timeline.py  session_bar.py
cc-sidecar/cmd/cc-sidecar-emit/: envelope.go  go.mod  main.go  redact.go  socket.go  spool.go
cc-sidecar/tests/: conftest.py  test_extractor.py  test_integration.py  test_redact.py  test_reducer.py  test_store.py
dialectic/: .dockerignore  .env.example  .gitignore  AGENT_NATIVE_AUDIT.md  AGENT_NATIVE_AUDIT_ENHANCED.md  CHANGELOG.md  CLAUDE.md  Dockerfile  ENHANCEMENT_REPORT.md  Makefile  README.md  TODOS.md  browser-test.mjs  docker-compose.yml  models.py  operations.py  pyproject.toml  requirements.txt  run.py  schema.sql
mobile/: app.config.js  eslint.config.js  package-lock.json  package.json
(+319 files in other folders)
