[project]
name = "cc-sidecar"
version = "0.1.0"
description = "Passive event-sourced observability sidecar for Claude Code"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
    "aiosqlite>=0.19",
    "websockets>=12.0",
    "textual>=0.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
cc-sidecard = "cc_sidecar.daemon.server:main"
cc-sidecar-tui = "cc_sidecar.tui.app:main"
cc-sidecar-install = "cc_sidecar.install.cli:main"

[tool.setuptools.packages.find]
include = ["cc_sidecar*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
